[tool.poetry]
name = "saioleor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ariadne = "^0.5.0"
faker = "^1.0"
uvicorn = "^0.6.1"
aiodataloader = "^0.1.2"
starlette = "^0.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = "^19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
